# template-cpp

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md
cmake/: BaseRepo.cmake  add_compile_options.cmake  add_exe.cmake  add_gtest.cmake  compile_options.cmake  doxygen.cmake  fmt.cmake  gtest.cmake
examples/my_lib/: CMakeLists.txt  example_my_lib.cpp
include/my_lib/: my_lib.hpp
src/my_lib/: CMakeLists.txt  my_lib.cpp
tests/my_lib/: CMakeLists.txt  test_my_lib.cpp
